Merged in string-format-update (pull request #26)
Vaheta staatilise String.format kasutus isendi String.formatted kasutuseks

* Vaheta staatilise String.format kasutus isendi String.formatted kasutuseks


Approved-by: Simmo Saan